# pps-benchmark

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Manifest.toml  Project.toml  README.md
benchmarks/: run_backend.jl  run_sweep.jl
configs/: bench_eagle_127.toml  bench_medium.toml  bench_small.toml  lowesa_tfi_127_L5_mz.toml  lowesa_tfi_127_L5_mz_ext_thr1e-5_40pt.toml  lowesa_tfi_127_L5_mz_ext_thr1e-6_40pt.toml  lowesa_tfi_127_L5_mz_ext_thr1e-7.toml  lowesa_tfi_127_L5_mz_ext_thr1e-7_40pt.toml  lowesa_tfi_127_L5_mz_julia_f30w6_40pt.toml  lowesa_tfi_127_L5_mz_julia_f40w8_40pt.toml  lowesa_tfi_127_L5_z62.toml  reproduce_rudolph_eagle_127.toml  sweep_medium.toml
docs/: circuit_exchange_schema.md  cpp_pauliengine_backend.md  cuda_cupauliprop_backend.md  ibm_eagle_127_reproduction.md  lowesa_tfi_127_benchmark.md  python_bluequbit_backend.md  python_cuquantum_backend.md  rust_pauliprop_backend.md
reference/: ibm_utility_L5_Mz.txt  ibm_utility_L5_Mz_40pt.txt  ibm_utility_L5_Z62.txt
scripts/: compare_backends.py  compare_truncation_types.py  extract_ibm_reference.py  plot.py  plot_sweep.py  run_lowesa127.pbs  run_lowesa127_all.pbs  sweep_truncation.py  truncation_demo.py  validate_lowesa127.py
src/: PPSBackendBench.jl
src/backends/: abstract.jl  cpp_pauliengine.jl  cuda_cupauliprop.jl  julia_pauliprop.jl  python_bluequbit.jl  python_cuquantum.jl  rust_pauliprop.jl
src/io/: schema.jl
wrappers/cpp/: README.md  (+2 more)
wrappers/rust/: Cargo.toml  README.md  requirements.txt
wrappers/rust/src/: circuit.rs  gatemap.rs  lib.rs  main.rs  propagate.rs  result.rs
(+8 files in other folders)
